Finishes creating works

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+::-webkit-scrollbar-track {
+  display: none;
+}
+::-webkit-scrollbar-corner {
+  display: none;
+}
+::-webkit-scrollbar-button {
+  display: none;
+} 
+::-webkit-scrollbar-thumb{
+ display: none;
+}
+
