--- a/src/index.css
+++ b/src/index.css
@@ -13,18 +13,25 @@
 }
 
 ::-webkit-scrollbar {
-  display: none;
-}
-::-webkit-scrollbar-track {
-  display: none;
-}
-::-webkit-scrollbar-corner {
-  display: none;
-}
-::-webkit-scrollbar-button {
-  display: none;
-} 
-::-webkit-scrollbar-thumb{
- display: none;
+  width: 10px;
+
 }
 
+
+::-webkit-scrollbar-track {
+  background-color: inherit;
+
+}
+/* ::-webkit-scrollbar-corner {
+  display: none;
+} */
+::-webkit-scrollbar-button {
+  background-color: inherit;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+ 
+  background-color: #212830;
+ 
+}
+ 
