--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 *,
 *::after,
 *::before {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-optical-sizing: auto;
   margin: 0;
   padding: 0;
 }
@@ -106,3 +108,25 @@
 .clipping:hover {
    clip-path: circle(0%);
 } */
+
+.gradient__bg {
+  background-color: hsla(65, 60%, 97%, 1);
+  background-image: radial-gradient(
+      circle at 92% 93%,
+      hsla(190, 56%, 91%, 0.53) 11%,
+      transparent 79%
+    ),
+    radial-gradient(
+      circle at 8% 11%,
+      hsla(29.117647058823515, 100%, 90%, 1) 23.38500708985851%,
+      transparent 83%
+    ),
+    radial-gradient(circle at 9% 94%, hsla(42.99999999999978, 91%, 94%, 1) 16%, transparent 51%),
+    radial-gradient(circle at 16% 43%, hsla(81, 82%, 98%, 1) 3%, transparent 59%),
+    radial-gradient(
+      circle at 48% 8%,
+      hsla(252.79411764705875, 81%, 51%, 0.48) 11.409319104160762%,
+      transparent 83%
+    );
+  background-blend-mode: normal, normal, normal, normal, normal;
+}
